# machine-core

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  mcp.json.example  pyproject.toml
docs/: DEPLOYMENT.md  README.md  agents.md  api-reference.md  architecture.md  changelog.md  configuration.md  deployment.md  examples.md  file-processing.md  getting-started.md  index.md  overview.md  providers.md  vector-store.md
docs/tools/: mcp-toolsets.md  openapi-tools.md  tool-filtering.md
frontend/: index.html  script.js  styles.css
public/: app.js  index.html  style.css
src/: main.py
src/machine_core/: __init__.py
src/machine_core/agents/: __init__.py  chat_agent.py  cli_agent.py  examples.py  memory_master_agent.py  rag_chat_agent.py  receipt_processor_agent.py  twitter_bot_agent.py
src/machine_core/core/: agent_base.py  agent_core.py  config.py  document_store.py  file_processor.py  mcp_setup.py  openapi_tools.py  tool_filter.py  vector_store.py
