[project]
name = "machine-core"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "valiantlynx", email = "gormerykombo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "loguru>=0.7.3",
    "model-providers",
    "pydantic-ai>=1.11.0",
]

[tool.uv.sources]
model-providers = { git = "git+https://github.com/mythrantic/model-providers.git" }

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
