[project]
name = "machine-core"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "valiantlynx", email = "gormerykombo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "loguru>=0.7.3",
    "model-providers",
    "pydantic-ai>=1.11.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
model-providers = { git = "git+https://github.com/samletnorge/model-providers.git" }

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
